@@ -1,20 +1,30 @@
 package org.reactome.server.tools;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import org.reactome.server.tools.model.query.IDMappingStatus;
+import org.reactome.server.tools.model.query.IDMappingSubmission;
+
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.net.URLConnection;
-import java.net.URLEncoder;
+import java.io.UncheckedIOException;
+import java.net.*;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.net.http.HttpResponse.BodySubscriber;
 import java.nio.charset.StandardCharsets;
-import java.util.Collection;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class Utils {
+    private static final HttpClient httpClient = HttpClient.newBuilder()
+            .version(HttpClient.Version.HTTP_1_1)
+            .followRedirects(HttpClient.Redirect.NEVER)
+            .build();
+    private static final ObjectMapper mapper = new ObjectMapper();
+
     public static String encodeURL(Map<String, Object> postData) {
         return encodeURL(postData,
                 collection -> collection.stream()
@@ -38,46 +48,62 @@ public class Utils {
                 .map(start -> collection.stream().skip(start).limit(sliceSize).collect(Collectors.toUnmodifiableList()));
     }
 
-    // Dirty but couldn't manage to make it work with httpClient
-    public static String queryUniprot(Map<String, Object> postData) {
-        try {
-            String location = "https://www.uniprot.org/uploadlists/?" + encodeURL(postData);
-            URL url = new URL(location);
-            HttpURLConnection conn;
-            conn = (HttpURLConnection) url.openConnection();
-            HttpURLConnection.setFollowRedirects(true);
-            conn.setDoInput(true);
-            conn.connect();
+    public static HttpResponse<String> getRequest(String url) throws IOException, InterruptedException {
+        HttpRequest request = HttpRequest.newBuilder()
+                .GET()
+                .uri(URI.create(url))
+                .build();
+        return httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+    }
 
-            int status = conn.getResponseCode();
-            while (true) {
-                int wait = 0;
-                String header = conn.getHeaderField("Retry-After");
-                if (header != null)
-                    wait = Integer.parseInt(header);
-                if (wait == 0)
-                    break;
-                conn.disconnect();
-                Thread.sleep(wait * 1000L);
-                conn = (HttpURLConnection) new URL(location).openConnection();
-                conn.setDoInput(true);
-                conn.connect();
-                status = conn.getResponseCode();
+    public static <T> T getRequest(String url, Class<T> returnClass) throws IOException, InterruptedException {
+        return mapper.readValue(getRequest(url).body(), returnClass);
+    }
+
+    public static HttpResponse<String> postRequest(String url, Map<String, Object> postData) throws IOException, InterruptedException {
+        HttpRequest request = HttpRequest.newBuilder()
+                .POST(HttpRequest.BodyPublishers.ofString(encodeURL(postData)))
+                .uri(URI.create(url))
+                .header("User-Agent", "IntAct Bot") // add request header
+                .header("Content-Type", "application/x-www-form-urlencoded")
+                .build();
+        return httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+    }
+
+    public static <T> T postRequest(String url, Map<String, Object> postData, Class<T> returnClass) throws IOException, InterruptedException {
+        return mapper.readValue(postRequest(url, postData).body(), returnClass);
+    }
+
+    // Dirty but couldn't manage to make it work with httpClient
+    public static Set<String> queryUniprot(Set<String> identifiersToTest) {
+        Map<String, Object> postData = Map.of(
+                "ids", String.join(",", identifiersToTest),
+                "from", "UniProtKB_AC-ID",
+                "to", "UniProtKB"
+        );
+
+        try {
+            IDMappingSubmission jobResponse = postRequest("https://rest.uniprot.org/idmapping/run", postData, IDMappingSubmission.class);
+            String jobId = jobResponse.jobId;
+            boolean onGoing = true;
+            int waitingTime = 5000;
+            while (onGoing) {
+                Thread.sleep(waitingTime);
+                HttpResponse<String> statusResponse = getRequest("https://rest.uniprot.org/idmapping/status/" + jobId);
+                onGoing = statusResponse.statusCode() != 303;
+                if (statusResponse.statusCode() == 429) waitingTime += 1000;
+                else if (String.valueOf(statusResponse.statusCode()).charAt(0) == '4')
+                    throw new RuntimeException("ID Mapping job failed");
             }
-            if (status == HttpURLConnection.HTTP_OK) {
-                InputStream reader = conn.getInputStream();
-                URLConnection.guessContentTypeFromStream(reader);
-                StringBuilder builder = new StringBuilder();
-                int a = 0;
-                while ((a = reader.read()) != -1) {
-                    builder.append((char) a);
-                }
-                return builder.toString();
-            } else
-                conn.disconnect();
+
+            HttpResponse<String> result = getRequest("https://rest.uniprot.org/idmapping/uniprotkb/results/stream/" + jobId + "?fields=accession&format=tsv");
+            return Arrays.stream(result.body().split("\n"))
+                    .skip(1) // skip header
+                    .map(s -> s.split("\t")[0])
+                    .collect(Collectors.toSet());
+
         } catch (IOException | InterruptedException e) {
-            e.printStackTrace();
+            throw new RuntimeException(e);
         }
-        return "";
     }
 }
